--- a/app/src/main/res/values/payments.xml
+++ b/app/src/main/res/values/payments.xml
@@ -33,7 +33,7 @@
     <item>@array/a10</item>
 </array>
         <string-array name ="a0">
-            <item>ЗАО "Актив-софт"</item>
+            <item>АО "Актив-софт"</item>
             <item>7712545785</item>
             <item>771254552</item>
             <item>40702800000012354457</item>
@@ -51,7 +51,7 @@
             <item>За телепатические услуги</item>
         </string-array>
         <string-array name ="a1">
-            <item>ЗАО "Актив-софт"</item>
+            <item>АО "Актив-софт"</item>
             <item>7712545785</item>
             <item>771254552</item>
             <item>40702800000012354457</item>
@@ -69,7 +69,7 @@
             <item>За телепатические услуги</item>
         </string-array>
         <string-array name ="a2">
-            <item>ЗАО "Актив-софт"</item>
+            <item>АО "Актив-софт"</item>
             <item>7712545785</item>
             <item>771254552</item>
             <item>40702800000012354457</item>
@@ -87,7 +87,7 @@
             <item>За телепатические услуги</item>
         </string-array>
         <string-array name ="a3">
-            <item>ЗАО "Актив-софт"</item>
+            <item>АО "Актив-софт"</item>
             <item>7712545785</item>
             <item>771254552</item>
             <item>40702800000012354457</item>
@@ -105,7 +105,7 @@
             <item>За телепатические услуги</item>
         </string-array>
         <string-array name ="a4">
-            <item>ЗАО "Актив-софт"</item>
+            <item>АО "Актив-софт"</item>
             <item>7712545785</item>
             <item>771254552</item>
             <item>40702800000012354457</item>
@@ -123,7 +123,7 @@
             <item>За телепатические услуги</item>
         </string-array>
         <string-array name ="a5">
-            <item>ЗАО "Актив-софт"</item>
+            <item>АО "Актив-софт"</item>
             <item>7712545785</item>
             <item>771254552</item>
             <item>40702800000012354457</item>
@@ -141,7 +141,7 @@
             <item>За телепатические услуги</item>
         </string-array>
         <string-array name ="a6">
-            <item>ЗАО "Актив-софт"</item>
+            <item>АО "Актив-софт"</item>
             <item>7712545785</item>
             <item>771254552</item>
             <item>40702800000012354457</item>
@@ -159,7 +159,7 @@
             <item>За телепатические услуги</item>
         </string-array>
         <string-array name ="a7">
-            <item>ЗАО "Актив-софт"</item>
+            <item>АО "Актив-софт"</item>
             <item>7712545785</item>
             <item>771254552</item>
             <item>40702800000012354457</item>
@@ -177,7 +177,7 @@
             <item>За телепатические услуги</item>
         </string-array>
         <string-array name ="a8">
-            <item>ЗАО "Актив-софт"</item>
+            <item>АО "Актив-софт"</item>
             <item>7712545785</item>
             <item>771254552</item>
             <item>40702800000012354457</item>
@@ -195,7 +195,7 @@
             <item>За телепатические услуги</item>
         </string-array>
         <string-array name ="a9">
-            <item>ЗАО "Актив-софт"</item>
+            <item>АО "Актив-софт"</item>
             <item>7712545785</item>
             <item>771254552</item>
             <item>40702800000012354457</item>
@@ -213,7 +213,7 @@
             <item>За телепатические услуги</item>
         </string-array>
         <string-array name ="a10">
-            <item>ЗАО "Актив-софт"</item>
+            <item>АО "Актив-софт"</item>
             <item>7712545785</item>
             <item>771254552</item>
             <item>40702800000012354457</item>
