Update application actionbar
Add new logo. Change our red color to official Rutoken red.
Remove some unneeded more resources.

Refer: BANKDROID-1

--- a/app/src/main/res/layout-large/login_dialog.xml
+++ b/app/src/main/res/layout-large/login_dialog.xml
@@ -27,9 +27,9 @@
         android:textSize="10sp" />
 
     <Button
+        android:id="@+id/signB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/signB"
-        android:background="@drawable/ab_bg"
+        android:background="@android:color/transparent"
         android:text="@string/ok" />
 </LinearLayout>
