--- a/app/src/main/res/layout-xlarge/payment_info_layout.xml
+++ b/app/src/main/res/layout-xlarge/payment_info_layout.xml
@@ -23,12 +23,12 @@
     </ScrollView>
 
     <Button
+        android:id="@+id/sendB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sign"
-        android:id="@+id/sendB"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/ab_bg"
+        android:background="@color/rutokenRed"
+        android:text="@string/sign"
         android:visibility="visible" />
 
 </LinearLayout>
