--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,14 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/rutokenRed</item>
+        <item name="colorPrimaryDark">@color/rutokenRed</item>
+        <item name="colorAccent">@color/rutokenRed</item>
+        <item name="android:actionBarStyle">@style/RutokenActionBar</item>
+    </style>
+
+    <style name="RutokenActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:background">@color/rutokenRed</item>
     </style>
 
     <style name="DialogAnimation">
