Remove image with BT token from main screen
Refer: BANKDROID-1

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="nfcText">#444444</color>
     <color name="rutokenRed">#DD2233</color>
+    <color name="background">#FAFAFA</color>>
 </resources>
