--- a/app/src/main/res/layout-xlarge/main.xml
+++ b/app/src/main/res/layout-xlarge/main.xml
@@ -9,28 +9,28 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/cut_white">
+        android:background="@color/background">
 
         <TextView
+            android:id="@+id/infoTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/infoTV"
-            android:textColor="@android:color/black"
-            android:textAlignment="gravity"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:layout_marginTop="237dp"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:layout_marginTop="237dp"
+            android:gravity="center"
+            android:textAlignment="gravity"
+            android:textColor="@android:color/black"
+            android:textSize="20sp" />
 
         <ProgressBar
+            android:id="@+id/twbaPB"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/twbaPB"
-            android:layout_gravity="center_horizontal"
             android:layout_below="@+id/infoTV"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal" />
 
     </RelativeLayout>
 
