--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="nfcText">#444444</color>
     <color name="rutokenRed">#DD2233</color>
     <color name="background">#FAFAFA</color>>
+    <color name="rutokenBlue">#117788</color>
 </resources>
