--- a/app/src/main/res/layout-large/login_dialog.xml
+++ b/app/src/main/res/layout-large/login_dialog.xml
@@ -28,8 +28,12 @@
 
     <Button
         android:id="@+id/signB"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:text="@string/ok" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10sp"
+        android:layout_marginBottom="10sp"
+        android:background="@color/rutokenBlue"
+        android:text="@string/ok"
+        android:textColor="@android:color/white" />
 </LinearLayout>
