--- a/app/src/main/res/layout-large/payment_info_layout.xml
+++ b/app/src/main/res/layout-large/payment_info_layout.xml
@@ -27,8 +27,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@color/rutokenRed"
+        android:background="@color/rutokenBlue"
         android:text="@string/sign"
+        android:textColor="@android:color/white"
         android:visibility="visible" />
 
 </LinearLayout>
