--- a/app/src/main/res/layout/popup_layout.xml
+++ b/app/src/main/res/layout/popup_layout.xml
@@ -8,6 +8,7 @@
         android:id="@+id/popupB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/rutokenRed"
-        android:text="@string/sign" />
+        android:background="@color/rutokenBlue"
+        android:text="@string/sign"
+        android:textColor="@android:color/white" />
 </LinearLayout>
