--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -17,11 +17,13 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginLeft="10sp"
             android:layout_marginTop="98dp"
+            android:layout_marginRight="10sp"
             android:gravity="center"
-            android:textAlignment="gravity"
+            android:textAlignment="center"
             android:textColor="@android:color/black"
-            android:textSize="17sp" />
+            android:textSize="20sp" />
 
         <Button
             android:id="@+id/selectButton"
