--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -38,7 +38,7 @@
             android:textColor="@android:color/white" />
 
         <ProgressBar
-            android:id="@+id/twbaPB"
+            android:id="@+id/tokenAddingProgressBar"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
