--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -17,9 +17,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="10sp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="98dp"
-            android:layout_marginRight="10sp"
+            android:layout_marginRight="10dp"
             android:gravity="center"
             android:textAlignment="center"
             android:textColor="@android:color/black"
@@ -31,11 +31,23 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/infoTV"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10sp"
-            android:layout_marginBottom="10sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@color/rutokenBlue"
             android:text="@string/select"
             android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/removeNfcButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/selectButton"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/rutokenBlue"
+            android:background="@android:color/transparent"
+            android:visibility="gone"/>
 
         <ProgressBar
             android:id="@+id/tokenAddingProgressBar"
