--- a/app/src/main/res/layout/payment_info_layout.xml
+++ b/app/src/main/res/layout/payment_info_layout.xml
@@ -16,6 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/dataTV"
             android:textColor="@android:color/black"
